middle task of november